--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,19 @@
-# Dependencies
+﻿# Node
 node_modules/
-npm-debug.log*
 
-# Environment
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Env
 .env
-.env.local
+.env.*
+backend/.env
 
 # Hardhat
-cache/
 artifacts/
+cache/
 
 # OS
 .DS_Store
@@ -22,3 +27,7 @@ Thumbs.db
 dist/
 build/
 .next/
+
+# Lockfiles
+package-lock.json
+yarn.lock
