--- a/package.json
+++ b/package.json
@@ -9,7 +9,25 @@
     "build": "cd frontend && npm run build",
     "deploy:contracts": "cd contracts && npx hardhat run scripts/deploy.js --network testnet"
   },
-  "keywords": ["hedera", "carbon", "nft", "blockchain", "sustainability"],
+  "keywords": [
+    "hedera",
+    "carbon",
+    "nft",
+    "blockchain",
+    "sustainability"
+  ],
   "author": "Francis Mwangi <githinjiann296@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.9.6",
+    "dotenv": "^16.6.1",
+    "hardhat": "^2.26.3"
+  },
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "chai": "^4.5.0",
+    "ethereum-waffle": "^4.0.10",
+    "ethers": "^5.8.0"
+  }
 }
